# gpu_benchmark

./: CMakeLists.txt
cmake_files/: Findbenchmark.cmake  LookupGBenchmark.cmake
result/: DGX1_P100-SXM2_bandwidth.txt  DGX1_P100-SXM2_dgemm.txt  DGX1_P100-SXM2_sgemm.txt  emerald_k20m_bandwidth.txt  emerald_k20m_dgemm.txt  emerald_k20m_sgemm.txt  emerald_k80m_bandwidth.txt  emerald_k80m_dgemm.txt  emerald_k80m_sgemm.txt  legion_k40_bandwidth.txt  legion_k40_dgemm.txt  legion_k40_sgemm.txt  legion_m2070_bandwidth.txt  legion_m2070_dgemm.txt  legion_m2070_sgemm.txt  plot.py  plot.r  plot_gemm.py
src/: CMakeLists.txt  simpleCUBLAS.cpp  test.cpp
src/gpu/: CMakeLists.txt  simpleCUBLAS.cpp  simpleCUFFT.cu
